--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h2>Garanta já seu eBook por um preço especial!</h2>
         <p><strong>INVISTA EM VOCÊ E NO SEU FUTURO!</strong></p>
         <p><strong>Preço:</strong> R$27,00 (ou parcelado em 2x no cartão)</p>
-        <a href="#" class="btn-buy">👉 QUERO MINHA PRIMEIRA VENDA EM 24H!</a>
+        <a href="https://pay.kiwify.com.br/Fa3E6Bl" class="btn-buy">👉 QUERO MINHA PRIMEIRA VENDA EM 24H!</a>
 
         <div class="guarantee">
             <strong>Garantia de satisfação:</strong><br>
